// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base <Form /> buttons disabled if fields are filled improperly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-giIncl jPAApu"
        id="0"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-dmlrTW ccRtsS"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-dmlrTW bVFKcM"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value="123"
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-hHftDr clzDPz"
              disabled=""
              form="0"
              type="submit"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-giIncl jPAApu"
      id="0"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-dmlrTW ccRtsS"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-dmlrTW bVFKcM"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value="123"
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-hHftDr clzDPz"
            disabled=""
            form="0"
            type="submit"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Form /> buttons disabled if fields are filled improperly form without steps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-giIncl jPAApu"
        id="testForm"
      >
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value="123"
            />
          </div>
        </div>
        <button
          class="sc-hHftDr clzDPz"
          disabled=""
          type="submit"
        >
          Wyślij
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-giIncl jPAApu"
      id="testForm"
    >
      <div
        class="sc-hKgILt bckkbl"
      >
        <label
          for="fName"
        >
          Imię*
        </label>
        <div
          class="sc-dIUggk hEHKqS"
        >
          <input
            class="sc-pFZIQ kIcSeo"
            label="Imię"
            name="fName"
            placeholder="Imię*"
            required=""
            value="123"
          />
        </div>
      </div>
      <button
        class="sc-hHftDr clzDPz"
        disabled=""
        type="submit"
      >
        Wyślij
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Form /> buttons disabled if required fields are not filled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-giIncl jPAApu"
        id="0"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-dmlrTW ccRtsS"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-dmlrTW bVFKcM"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value=""
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-hHftDr clzDPz"
              disabled=""
              form="0"
              type="submit"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-giIncl jPAApu"
      id="0"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-dmlrTW ccRtsS"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-dmlrTW bVFKcM"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value=""
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-hHftDr clzDPz"
            disabled=""
            form="0"
            type="submit"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Form /> multi step matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-giIncl jPAApu"
        id="0"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-dmlrTW ccRtsS"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-dmlrTW bVFKcM"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value=""
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-hHftDr clzDPz"
              disabled=""
              form="0"
              type="submit"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-giIncl jPAApu"
      id="0"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-dmlrTW ccRtsS"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-dmlrTW bVFKcM"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value=""
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-hHftDr clzDPz"
            disabled=""
            form="0"
            type="submit"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Form /> without matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-giIncl jPAApu"
        id="testForm"
      >
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value=""
            />
          </div>
        </div>
        <button
          class="sc-hHftDr clzDPz"
          disabled=""
          type="submit"
        >
          Wyślij
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-giIncl jPAApu"
      id="testForm"
    >
      <div
        class="sc-hKgILt bckkbl"
      >
        <label
          for="fName"
        >
          Imię*
        </label>
        <div
          class="sc-dIUggk hEHKqS"
        >
          <input
            class="sc-pFZIQ kIcSeo"
            label="Imię"
            name="fName"
            placeholder="Imię*"
            required=""
            value=""
          />
        </div>
      </div>
      <button
        class="sc-hHftDr clzDPz"
        disabled=""
        type="submit"
      >
        Wyślij
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
